--- a/less/about.less
+++ b/less/about.less
@@ -9,21 +9,27 @@
             h2 {
                 font-family: @font-Muli;
                 font-size: 18px;
-            
-                .fa {
-                    float: right;
-                }
             }
-
-            
         }
+        .fa{
+            position:absolute;
+            margin-top:-30px;
+            margin-left:80%;
 
+        }
+        button:active {
+                color:@orange;
+            }
+        button:hover + .transform-active {
+            display: block;
+        }
         p {
             font-family: @font-Muli;
             font-size: 14px;
         }
 
         ul {
+           display: none;
             list-style-position: inside;
 
             li {
@@ -31,10 +37,13 @@
                 font-size: 14px;
             }
         }
+
     }
 
 
     .appImgs {
+
+        margin-top: 20px;
         overflow-x: scroll;
         overflow-y: hidden;
         white-space: nowrap;
@@ -44,8 +53,10 @@
         }
 
         .about {
+            @media @desktop{
+                width: 24%; 
+            }
             display: inline-block;
-            /* width: 24%; for desktop*/
             width: 45%;
             margin-right: 5px;
 
