--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 
 /*MEDIA Queries*/
-@desktop: ~"(min-width: 501px)";
-
+@desktop: ~"(min-width:800px)";
+@tablet:~"(min-widht:500px)";
 /*Font*/
 
 @font-Muli: 'Muli', sans-serif;
