--- a/css/index.css
+++ b/css/index.css
@@ -158,24 +158,59 @@ img {
   height: auto;
 }
 .container {
-  max-width: 800px;
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
+}
+footer {
+  width: 100%;
+  background-color: #6F789C;
+  position: absolute;
+  left: 0px;
+  right: 0;
+}
+footer .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+footer .footer .copy-right {
+  color: white;
+  font-size: 20px;
+}
+footer .footer .fa {
+  font-size: 40px;
+  padding: 15px;
+  text-decoration: none;
+  color: #1f2852;
+}
+footer .footer a:hover {
+  color: #FE4909;
+}
+.aboutApp {
+  background-color: #E1E6F9;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .aboutApp .aboutTextBox {
   padding: 20px;
 }
 .aboutApp .aboutTextBox .aboutTitle h2 {
+  font-size: 20px;
   font-family: 'Muli', sans-serif;
-  font-size: 18px;
+  font-weight: bolder;
 }
 .aboutApp .aboutTextBox .fa {
   position: absolute;
   margin-top: -30px;
-  margin-left: 80%;
+  margin-left: 65%;
 }
 .aboutApp .aboutTextBox i:active {
-  color: #FD632D;
+  color: #FE4909;
 }
 .aboutApp .aboutTextBox i:hover + .transform-active {
   display: block;
@@ -196,41 +231,49 @@ img {
   font-size: 14px;
 }
 .aboutApp .appImgs {
-  padding: 0px 25px ;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+.aboutApp .appImgs .test {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
 }
-.aboutApp .appImgs :-webkit-scrollbar {
+.aboutApp .appImgs .test :-webkit-scrollbar {
   display: none;
 }
-.aboutApp .appImgs .about {
+.aboutApp .appImgs .test .about {
   display: inline-block;
   width: 45%;
   margin-right: 5px;
 }
+@media (min-width:500px) {
+  .aboutApp .appImgs .test .about {
+    width: 25%;
+    margin: 0 auto;
+  }
+}
 @media (min-widht:500px) {
-  .aboutApp .appImgs .about {
-    width: 35%;
-    background-color: azure;
+  .aboutApp .appImgs .test .about {
+    width: 25%;
   }
 }
-@media (min-width:800px) {
-  .aboutApp .appImgs .about {
-    width: 24%;
-  }
-}
-.aboutApp .appImgs .about img {
+.aboutApp .appImgs .test .about img {
   width: 100%;
+  margin: 0 auto;
   border-radius: 5%;
-  border: 1px solid #6F789C;
+  border: 1px solid #E1E6F9;
+}
+.teamContainer {
+  background-color: aliceblue;
 }
 .teamContainer h2 {
   text-align: center;
   font-size: 30px;
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
-  padding: 20px;
+  padding: 25px;
 }
 .teamContainer .teamCardsBox {
   width: 100%;
@@ -248,30 +291,42 @@ img {
   text-align: center;
   margin: 10px;
 }
-@media (min-width:800px) {
+@media (min-width:500px) {
   .teamContainer .teamCardsBox .card {
     width: 25%;
   }
 }
-.teamContainer .teamCardsBox .card img {
-  width: 100%;
+.teamContainer .teamCardsBox .card .memberPhoto {
+  position: relative;
+}
+.teamContainer .teamCardsBox .card .memberPhoto img {
+  max-width: 100%;
   border-radius: 50%;
   border: 2px solid #F1F3FD;
   box-shadow: 6px 6px 8px grey;
+  transition: transform 2s;
+}
+.teamContainer .teamCardsBox .card .memberPhoto img:hover {
+  transform: scale(1.1);
 }
 .teamContainer .teamCardsBox .card h3 {
   font-size: 20px;
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
+  margin-top: 10px;
 }
 .teamContainer .teamCardsBox .card p {
   font-size: 14px;
   font-family: 'Muli', sans-serif;
 }
 .teamContainer .teamCardsBox .card .socialLinks .fa {
+  font-size: 40px;
   padding: 5px;
   text-decoration: none;
-  color: #CA3A07;
+  color: #1f2852;
+}
+.teamContainer .teamCardsBox .card .socialLinks a:hover {
+  color: #FE4909;
 }
 .teamContainer .teamCardsBox .card7 {
   align-content: center;
