--- a/less/team.less
+++ b/less/team.less
@@ -1,11 +1,12 @@
 .teamContainer {
+    background-color: aliceblue;
 
     h2 {
         text-align: center;
         font-size: 30px;
         font-family: @font-Muli;
         font-weight: bolder;
-        padding: 20px;
+        padding: 25px;
     }
 
     .teamCardsBox {
@@ -29,17 +30,28 @@
             margin:10px;
 
 
-            img {
-                width: 100%;
-                border-radius: 50%;
-                border: 2px solid#F1F3FD;
-                box-shadow: 6px 6px 8px grey;
+            .memberPhoto {
+                position: relative;
+                
+                img {
+                    max-width: 100%;
+                    border-radius: 50%;
+                    border: 2px solid#F1F3FD;
+                    box-shadow: 6px 6px 8px grey;
+                    transition: transform 2s;
+                }
+
+                img:hover {
+                    transform: scale(1.1);
+                }
+
             }
 
             h3 {
                 font-size: 20px;
                 font-family: @font-Muli;
                 font-weight: bolder;
+                margin-top:10px;
             }
 
             p {
@@ -48,22 +60,22 @@
             }
 
             .socialLinks {
-
-                a .fa {
+                .fa {
+                    font-size: 40px;
                     padding: 5px;
                     text-decoration: none;
-                    color: black;
-
-                    &:hover {
-                        color: @yellow;
-                    }
+                    color: #1f2852;
                 }
 
+                a:hover {
+                    color: #FE4909
+                }
             }
 
-            .card7 {
-                align-content: center;
-            }
+        }
+
+        .card7 {
+            align-content: center;
         }
     }
 }
