changed the style to match Jada's design

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    background-color: @darkGray3;
+    background-color:@veryLightGray;
    
     position: absolute;
     left: 0px;
@@ -13,10 +13,11 @@ footer {
         align-items: center;
         text-align: center;
         .copy-right {
-            color: white;
+            color: @darkBlue;
             font-size: 20px;
           }
           .fa {
+
             font-size: 40px;
             padding: 15px;
             text-decoration: none;
