--- a/less/global.less
+++ b/less/global.less
@@ -8,6 +8,7 @@
   
   html, body {
     font-family: 'Roboto', sans-serif;
+    background-color: @veryLightGray;
   }
   
   h1, h2, h3, h4, h5 {
@@ -43,5 +44,6 @@
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+    background-color: white;
   }
   
