--- a/less/team.less
+++ b/less/team.less
@@ -1,12 +1,11 @@
 .teamContainer {
-    background-color: aliceblue;
-
     h2 {
         text-align: center;
-        font-size: 30px;
+        font-size: 40px;
         font-family: @font-Muli;
         font-weight: bolder;
         padding: 25px;
+        color:@textBlue;
     }
 
     .teamCardsBox {
@@ -52,11 +51,13 @@
                 font-family: @font-Muli;
                 font-weight: bolder;
                 margin-top:10px;
+                color:@textBlue;
             }
 
             p {
                 font-size: 14px;
                 font-family: @font-Muli;
+                color:@darkGray3;
             }
 
             .socialLinks {
