--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 
 /*MEDIA Queries*/
-@desktop: ~"(min-width:500px)";
-
+@desktop: ~"(min-width:800px)";
+@tablet:~"(min-widht:500px)";
 /*Font*/
 
 @font-Muli: 'Muli', sans-serif;
@@ -16,6 +16,7 @@
 @redOrange: #FE4909;
 @orange: #FD632D;
 @darkBlue: #1f2852;
+@textBlue:#2C3A74;
 @lightOrange:#FDCAB8;
 
 
