--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,7 @@ html {
 html,
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: #E1E6F9;
 }
 h1,
 h2,
@@ -161,10 +162,11 @@ img {
   max-width: 1000px;
   width: 100%;
   margin: 0 auto;
+  background-color: white;
 }
 footer {
   width: 100%;
-  background-color: #6F789C;
+  background-color: #E1E6F9;
   position: absolute;
   left: 0px;
   right: 0;
@@ -177,7 +179,7 @@ footer .footer {
   text-align: center;
 }
 footer .footer .copy-right {
-  color: white;
+  color: #1f2852;
   font-size: 20px;
 }
 footer .footer .fa {
@@ -190,7 +192,6 @@ footer .footer a:hover {
   color: #FE4909;
 }
 .aboutApp {
-  background-color: #E1E6F9;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -199,15 +200,29 @@ footer .footer a:hover {
 .aboutApp .aboutTextBox {
   padding: 20px;
 }
-.aboutApp .aboutTextBox .aboutTitle h2 {
-  font-size: 20px;
+.aboutApp .aboutTextBox p {
+  text-align: center;
+  color: #2C3A74;
+  font-family: 'Muli', sans-serif;
+  font-size: 30px;
+}
+.aboutApp .aboutTextBox h2 {
+  font-size: 40px;
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
+  text-align: center;
+  color: #2C3A74;
 }
 .aboutApp .aboutTextBox .fa {
   position: absolute;
-  margin-top: -30px;
-  margin-left: 65%;
+  margin-top: -43px;
+  margin-left: 79%;
+  color: #2C3A74;
+}
+@media (min-width:800px) {
+  .aboutApp .aboutTextBox .fa {
+    margin-left: 65%;
+  }
 }
 .aboutApp .aboutTextBox i:active {
   color: #FE4909;
@@ -218,17 +233,13 @@ footer .footer a:hover {
 .aboutApp .aboutTextBox i {
   cursor: pointer;
 }
-.aboutApp .aboutTextBox p {
-  font-family: 'Muli', sans-serif;
-  font-size: 14px;
-}
 .aboutApp .aboutTextBox ul {
   display: none;
   list-style-position: inside;
 }
 .aboutApp .aboutTextBox ul li {
   font-family: 'Muli', sans-serif;
-  font-size: 14px;
+  font-size: 20px;
 }
 .aboutApp .appImgs {
   display: flex;
@@ -243,15 +254,29 @@ footer .footer a:hover {
 .aboutApp .appImgs .test :-webkit-scrollbar {
   display: none;
 }
+@media (min-width:800px) {
+  .aboutApp .appImgs .test {
+    overflow-x: visible;
+    white-space: wrap;
+    overflow-y: visible;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    align-content: center;
+    justify-content: center;
+  }
+}
 .aboutApp .appImgs .test .about {
   display: inline-block;
   width: 45%;
   margin-right: 5px;
 }
-@media (min-width:500px) {
+@media (min-width:800px) {
   .aboutApp .appImgs .test .about {
     width: 25%;
     margin: 0 auto;
+    margin: 5px 20px;
   }
 }
 @media (min-widht:500px) {
@@ -264,16 +289,19 @@ footer .footer a:hover {
   margin: 0 auto;
   border-radius: 5%;
   border: 1px solid #E1E6F9;
+  box-shadow: 6px 6px 8px grey;
+  transition: transform 2s;
 }
-.teamContainer {
-  background-color: aliceblue;
+.aboutApp .appImgs .test .about img:hover {
+  transform: scale(1.1);
 }
 .teamContainer h2 {
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
   padding: 25px;
+  color: #2C3A74;
 }
 .teamContainer .teamCardsBox {
   width: 100%;
@@ -291,7 +319,7 @@ footer .footer a:hover {
   text-align: center;
   margin: 10px;
 }
-@media (min-width:500px) {
+@media (min-width:800px) {
   .teamContainer .teamCardsBox .card {
     width: 25%;
   }
@@ -314,10 +342,12 @@ footer .footer a:hover {
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
   margin-top: 10px;
+  color: #2C3A74;
 }
 .teamContainer .teamCardsBox .card p {
   font-size: 14px;
   font-family: 'Muli', sans-serif;
+  color: #6F789C;
 }
 .teamContainer .teamCardsBox .card .socialLinks .fa {
   font-size: 40px;
