--- a/less/about.less
+++ b/less/about.less
@@ -1,7 +1,6 @@
 @tablet: ~"(min-widht:500px)";
 
 .aboutApp {
-    background-color: #E1E6F9;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -10,20 +9,33 @@
     .aboutTextBox {
         padding: 20px;
 
-        .aboutTitle {
-            h2 {
-                font-size: 20px;
-                font-family: @font-Muli;
-                font-weight: bolder;
-            }
+        p {
+            text-align: center;
+            color:@textBlue;
+            font-family: @font-Muli;
+            font-size: 30px;
         }
+
+        h2 {
+            font-size: 40px;
+            font-family: @font-Muli;
+            font-weight: bolder;
+            text-align: center;
+            color:@textBlue;
+        }
+
 
         .fa {
+            @media @desktop{
+                margin-left: 65%;
+            }
             position: absolute;
-            margin-top: -30px;
-            margin-left: 65%;
-
+            margin-top: -43px;
+            margin-left: 79%;
+            color:@textBlue;
+            
         }
+       
 
         i:active {
             color: @redOrange;
@@ -37,18 +49,13 @@
             cursor: pointer;
         }
 
-        p {
-            font-family: @font-Muli;
-            font-size: 14px;
-        }
-
         ul {
             display: none;
             list-style-position: inside;
 
             li {
                 font-family: @font-Muli;
-                font-size: 14px;
+                font-size: 20px;
             }
         }
 
@@ -61,13 +68,24 @@
         padding: 20px;
 
         .test {
-           
             overflow-x: scroll;
             overflow-y: hidden;
             white-space: nowrap;
 
             :-webkit-scrollbar {
                 display: none;
+            }
+
+            @media @desktop {
+                overflow-x: visible;
+                white-space: wrap;
+                overflow-y: visible;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                flex-flow: wrap;
+                align-content: center;
+                justify-content: center;
             }
 
 
@@ -80,8 +98,10 @@
                 @media @desktop {
                     width: 25%;
                     margin: 0 auto;
+                    margin: 5px 20px;
                 }
-                @media @tablet{
+
+                @media @tablet {
                     width: 25%;
                 }
 
@@ -90,9 +110,15 @@
                     margin: 0 auto;
                     border-radius: 5%;
                     border: 1px solid #E1E6F9;
-                    ;
-
+                    box-shadow: 6px 6px 8px grey;
+                    transition: transform 2s;
                 }
+
+                img:hover {
+                    transform: scale(1.1);
+                }
+
+
             }
         }
     }
