--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
-
 /*MEDIA Queries*/
 @desktop: ~"(min-width:800px)";
-@tablet:~"(min-widht:500px)";
+@tablet: ~"(min-width:500px)";
+@tabletx: ~"(min-width:500px)";
 /*Font*/
 
 @font-Muli: 'Muli', sans-serif;
@@ -11,12 +11,10 @@
 @darkGray2: #545a75;
 @darkGray3: #6F789C;
 @lightGray: #F1F3FD;
-@veryLightGray:#E1E6F9;
+@veryLightGray: #E1E6F9;
 @darkOrange: #CA3A07;
 @redOrange: #FE4909;
 @orange: #FD632D;
 @darkBlue: #1f2852;
-@textBlue:#2C3A74;
-@lightOrange:#FDCAB8;
-
-
+@textBlue: #2C3A74;
+@lightOrange: #FDCAB8;
