--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,42 @@ footer .footer .fa {
 footer .footer a:hover {
   color: #FE4909;
 }
+header {
+  width: 100vw;
+  display: inline-block;
+  position: fixed;
+}
+header #hamburger {
+  display: inline-block;
+  cursor: pointer;
+  /* Rotate first bar */
+  /* Fade out the second bar */
+  /* Rotate last bar */
+}
+header #hamburger .bar1,
+header #hamburger .bar2,
+header #hamburger .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #F1F3FD;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+header #hamburger .change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+header #hamburger .change .bar2 {
+  opacity: 0;
+}
+header #hamburger .change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+#home {
+  background-image: url('../images/background.png');
+  height: 100vh;
+}
 .aboutApp {
   margin: 0 auto;
   display: flex;
@@ -360,4 +396,7 @@ footer .footer a:hover {
 }
 .teamContainer .teamCardsBox .card7 {
   align-content: center;
+}
+#contact {
+  height: 60vh;
 }
