added home bg and header

--- a/less/global.less
+++ b/less/global.less
@@ -46,4 +46,10 @@
     margin: 0 auto;
     background-color: white;
   }
-  
+
+  body {
+    padding: 0 10%;
+    section{
+      background-color: white;
+    }
+  }
