--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,12 @@ img {
   margin: 0 auto;
   background-color: white;
 }
+body {
+  padding: 0 10%;
+}
+body section {
+  background-color: white;
+}
 footer {
   width: 100%;
   background-color: #E1E6F9;
@@ -192,40 +198,66 @@ footer .footer a:hover {
   color: #FE4909;
 }
 header {
-  width: 100vw;
-  display: inline-block;
+  background-image: url('../images/background.png');
+  width: 80%;
+  height: 15vh;
   position: fixed;
-}
-header #hamburger {
-  display: inline-block;
-  cursor: pointer;
+  display: flex;
+  flex-wrap: wrap;
+  order: 1;
   /* Rotate first bar */
   /* Fade out the second bar */
   /* Rotate last bar */
 }
-header #hamburger .bar1,
-header #hamburger .bar2,
-header #hamburger .bar3 {
+header #logo {
+  margin: 30px 45px;
+  max-width: 15vw;
+}
+header #hamburger {
+  display: inline-block;
+  cursor: pointer;
+  background-color: transparent;
+  width: 50px;
+}
+header .bar1,
+header .bar2,
+header .bar3 {
   width: 35px;
   height: 5px;
   background-color: #F1F3FD;
   margin: 6px 0;
   transition: 0.4s;
 }
-header #hamburger .change .bar1 {
+header .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
   transform: rotate(-45deg) translate(-9px, 6px);
 }
-header #hamburger .change .bar2 {
+header .change .bar2 {
   opacity: 0;
 }
-header #hamburger .change .bar3 {
+header .change .bar3 {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px);
 }
+header button {
+  background-color: transparent;
+  border: solid white 3px;
+  width: 150px;
+  height: 50%;
+  border-radius: 20px;
+  color: white;
+  font-size: 2.5rem;
+}
 #home {
-  background-image: url('../images/background.png');
   height: 100vh;
+  background-image: url('../images/background.png');
+  max-height: 100vh;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+#home #intro #input {
+  display: flex;
 }
 .aboutApp {
   margin: 0 auto;
@@ -255,7 +287,7 @@ header #hamburger .change .bar3 {
   margin-left: 79%;
   color: #2C3A74;
 }
-@media (min-width:800px) {
+@media (min-width:1000px) {
   .aboutApp .aboutTextBox .fa {
     margin-left: 65%;
   }
@@ -290,7 +322,7 @@ header #hamburger .change .bar3 {
 .aboutApp .appImgs .test :-webkit-scrollbar {
   display: none;
 }
-@media (min-width:800px) {
+@media (min-width:1000px) {
   .aboutApp .appImgs .test {
     overflow-x: visible;
     white-space: wrap;
@@ -308,7 +340,7 @@ header #hamburger .change .bar3 {
   width: 45%;
   margin-right: 5px;
 }
-@media (min-width:800px) {
+@media (min-width:1000px) {
   .aboutApp .appImgs .test .about {
     width: 25%;
     margin: 0 auto;
@@ -355,13 +387,13 @@ header #hamburger .change .bar3 {
   justify-content: center;
   margin: 10px;
 }
-@media (min-width:800px) {
+@media (min-width:1000px) {
   .teamContainer .teamCardsBox .card {
     border-bottom: 1px dotted #ddd;
     padding-bottom: 10px;
   }
 }
-@media (min-width:500px) {
+@media (min-width:800px) {
   .teamContainer .teamCardsBox .card {
     border-bottom: 1px dotted #ddd;
     padding-bottom: 10px;
@@ -371,14 +403,14 @@ header #hamburger .change .bar3 {
   margin: 0 auto;
   width: 50%;
 }
-@media (min-width:800px) {
+@media (min-width:1000px) {
   .teamContainer .teamCardsBox .card .memberPhoto {
     position: relative;
     margin: 0 20px;
     width: 100%;
   }
 }
-@media (min-width:500px) {
+@media (min-width:800px) {
   .teamContainer .teamCardsBox .card .memberPhoto {
     position: relative;
     margin: 0 20px;
@@ -425,25 +457,25 @@ header #hamburger .change .bar3 {
 .teamContainer .teamCardsBox .card .memberInfo .socialLinks a:hover {
   color: #FE4909;
 }
-@media (min-width:800px) {
-  .teamContainer .teamCardsBox .cardA {
-    text-align: left;
-    flex-direction: row;
-  }
-}
-@media (min-width:500px) {
+@media (min-width:1000px) {
   .teamContainer .teamCardsBox .cardA {
     text-align: left;
     flex-direction: row;
   }
 }
 @media (min-width:800px) {
+  .teamContainer .teamCardsBox .cardA {
+    text-align: left;
+    flex-direction: row;
+  }
+}
+@media (min-width:1000px) {
   .teamContainer .teamCardsBox .cardB {
     text-align: right;
     flex-direction: row-reverse;
   }
 }
-@media (min-width:500px) {
+@media (min-width:800px) {
   .teamContainer .teamCardsBox .cardB {
     text-align: right;
     flex-direction: row-reverse;
