--- a/less/header.less
+++ b/less/header.less
@@ -1,13 +1,25 @@
 header {
-    width: 100vw;
-    display: inline-block;
+    background-image: url('../images/background.png');
+    width: 80%;
+    height: 15vh;    
     position: fixed;
+
+    display: flex;
+    flex-wrap: wrap;
+    order: 1;
+
+    #logo {
+        margin: 30px 45px;
+        max-width: 15vw;
+    }
 
 
     #hamburger {
         display: inline-block;
         cursor: pointer;
-
+        background-color: transparent;
+        width: 50px;
+    }
 
         .bar1, .bar2, .bar3 {
             width: 35px;
@@ -33,5 +45,15 @@ header {
             -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
             transform: rotate(45deg) translate(-8px, -8px) ;
         }
-    }
+
+        button {
+            background-color: transparent;
+            border: solid white 3px;
+            width: 150px;
+            height: 50%;
+            border-radius: 20px;
+
+            color: white;
+            font-size: 2.5rem;
+        }
 }
