--- a/less/home.less
+++ b/less/home.less
@@ -1,5 +1,17 @@
 #home {
-    background-image: url('../images/background.png');
-
     height: 100vh;
+    max-width: 100%;
+    background-image: url('../images/background.png');
+    max-height: 100vh;
+    max-width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    #intro #input {
+        display: flex;
+
+    }
+
+
 }
