--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,8 @@
 /*MEDIA Queries*/
-@desktop: ~"(min-width:800px)";
-@tablet: ~"(min-width:500px)";
-@tabletx: ~"(min-width:500px)";
+@desktop: ~"(min-width:1000px)";
+@tablet: ~"(min-width:800px)";
+@tabletx: ~"(min-width:800px)";
+@mobile: ~"(max-width:800px)";
 /*Font*/
 
 @font-Muli: 'Muli', sans-serif;
