--- a/less/header.less
+++ b/less/header.less
@@ -6,27 +6,35 @@ header {
 
     display: flex;
     flex-wrap: wrap;
-    order: 1;
+    z-index: 2;
+
+    justify-content: space-between;
 
     #logo {
         margin: 30px 45px;
         max-width: 15vw;
     }
 
+    #spacer {
+        display: flex;
+    }
 
     #hamburger {
         display: inline-block;
         cursor: pointer;
         background-color: transparent;
         width: 50px;
+        margin: 40px 45px;
+
     }
 
         .bar1, .bar2, .bar3 {
-            width: 35px;
-            height: 5px;
+            width: 45px;
+            height: 6px;
             background-color: @lightGray;
-            margin: 6px 0;
+            margin: 8px 0;
             transition: 0.4s;
+            border-radius: 5px;
         }
 
         /* Rotate first bar */
@@ -51,6 +59,9 @@ header {
             border: solid white 3px;
             width: 150px;
             height: 50%;
+            margin: 30px 45px;
+
+
             border-radius: 20px;
 
             color: white;
