--- a/css/index.css
+++ b/css/index.css
@@ -228,7 +228,7 @@ header .bar1,
 header .bar2,
 header .bar3 {
   width: 45px;
-  height: 6px;
+  height: 7px;
   background-color: #F1F3FD;
   margin: 8px 0;
   transition: 0.4s;
@@ -242,8 +242,8 @@ header .change .bar2 {
   opacity: 0;
 }
 header .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
+  -webkit-transform: rotate(45deg) translate(-14px, -12px);
+  transform: rotate(45deg) translate(-14px, -12px);
 }
 header button {
   background-color: transparent;
@@ -260,11 +260,6 @@ header button {
   background-image: url('../images/background.png');
   max-height: 100vh;
   max-width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-#home #intro #input {
-  display: flex;
 }
 .aboutApp {
   margin: 0 auto;
@@ -489,5 +484,42 @@ header button {
   }
 }
 #contact {
-  height: 60vh;
+  background-color: #1f2852;
+  font-size: 3.5rem;
+  color: white;
+  padding-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#contact #contactText {
+  text-align: center;
+  width: 80%;
+  margin: 5vh auto;
+}
+#contact #contactText h2 {
+  font-size: 6rem;
+  margin-bottom: 8vh;
+}
+#contact #contactText p {
+  font-size: 3.5rem;
+}
+#contact fieldset {
+  margin: 10vh auto;
+}
+#contact input {
+  width: 40vw;
+  height: 10vh;
+  margin: 40px;
+  font-size: 3.5rem;
+  border-radius: 40px;
+}
+#contact #message {
+  height: 40vh;
+}
+#contact #submit {
+  background-color: transparent;
+  color: white;
+  border: solid white 5px;
 }
