--- a/less/home.less
+++ b/less/home.less
@@ -5,13 +5,13 @@
     max-height: 100vh;
     max-width: 100%;
 
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
 
-    #intro #input {
-        display: flex;
+    // #intro #input {
+    //     display: flex;
 
-    }
+    // }
 
 
 }
