minor tweaks to contact/global styles

--- a/less/contact.less
+++ b/less/contact.less
@@ -14,13 +14,15 @@
         width: 80%;
         margin: 5vh auto;
 
-        h2 {
+        h3 {
             font-size: 6rem;
+            color: lightsalmon;
             margin-bottom: 8vh;
         }
 
         p {
             font-size: 3.5rem;
+            color: thistle;
         }
     }
 
@@ -34,6 +36,11 @@
         height: 10vh;
         margin: 40px;
         font-size: 3.5rem;
+        color: thistle;
+
+        background-color: transparent;
+        border: solid black 1px;
+        box-shadow: inset 2px 5px black;
 
 
         border-radius: 40px;
