--- a/css/index.css
+++ b/css/index.css
@@ -150,9 +150,16 @@ h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
 }
+h3 {
+  font-size: 20px;
+  font-family: 'Muli', sans-serif;
+}
 h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
+}
+p {
+  font-family: 'Muli', sans-serif;
 }
 img {
   max-width: 100%;
@@ -498,12 +505,14 @@ header button {
   width: 80%;
   margin: 5vh auto;
 }
-#contact #contactText h2 {
+#contact #contactText h3 {
   font-size: 6rem;
+  color: lightsalmon;
   margin-bottom: 8vh;
 }
 #contact #contactText p {
   font-size: 3.5rem;
+  color: thistle;
 }
 #contact fieldset {
   margin: 10vh auto;
@@ -513,6 +522,10 @@ header button {
   height: 10vh;
   margin: 40px;
   font-size: 3.5rem;
+  color: thistle;
+  background-color: transparent;
+  border: solid black 1px;
+  box-shadow: inset 2px 5px black;
   border-radius: 40px;
 }
 #contact #message {
