--- a/less/global.less
+++ b/less/global.less
@@ -23,6 +23,11 @@
     font-size: 3.2rem;
     padding-bottom: 10px;
   }
+
+  h3 {
+    font-size: 20px;
+    font-family: @font-Muli;
+  }
   
   h4 {
     font-size: 2.5rem;
@@ -34,6 +39,11 @@
 //     font-size: 1.6rem;
 //     padding-bottom: 10px;
 //   }
+
+p {
+  font-family: @font-Muli;
+
+}
   
   img {
     max-width: 100%;
