--- a/less/contact.less
+++ b/less/contact.less
@@ -18,6 +18,7 @@
             font-size: 6rem;
             color: lightsalmon;
             margin-bottom: 8vh;
+            margin-top: 9vh;
         }
 
         p {
@@ -54,6 +55,14 @@
         background-color: transparent;
         color: white;
         border: solid white 5px;
+
+        cursor: pointer;
+
+        transition: all 500ms ease; 
+
+        &:hover{
+            animation: bounce 1s;
+        }
     }
 
 }
