--- a/less/home.less
+++ b/less/home.less
@@ -5,13 +5,26 @@
     max-height: 100vh;
     max-width: 100%;
 
-    // display: flex;
-    // flex-direction: column;
+    transition: all 800ms ease; 
 
-    // #intro #input {
-    //     display: flex;
+    h1 {
+        color: whitesmoke;
+        text-align: left;
+        line-height: 1.5;
 
-    // }
+        text-shadow: 2px 2px slategray;
+        padding: 250px  50px 80px;
+
+        width: 45%
+
+    }
+
+    p {
+        font-size: 4rem;
+        color: @textBlue;
+        font-style: oblique;
+        padding: 0 45px 150px;
+    }
 
 
 }
