--- a/less/global.less
+++ b/less/global.less
@@ -12,11 +12,11 @@
   }
   
   h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
+    font-family: @font-Muli;
   }
   
   h1 {
-    font-size: 4rem;
+    font-size: 6.5rem;
   }
   
   h2 {
@@ -58,7 +58,7 @@ p {
   }
 
   body {
-    padding: 0 10%;
+    padding: 0 7%;
     section{
       background-color: white;
     }
