--- a/less/home.less
+++ b/less/home.less
@@ -2,8 +2,14 @@
     height: 100vh;
     max-width: 100%;
     background-image: url('../images/background.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     max-height: 100vh;
-    max-width: 100%;
+    // max-width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
 
     transition: all 800ms ease; 
 
