--- a/less/contact.less
+++ b/less/contact.less
@@ -1,6 +1,6 @@
 #contact {
     background-color: @darkBlue;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     color: white;
     padding-top: 5vh;
 
@@ -8,6 +8,10 @@
     flex-direction: column;
     align-items:center;
     justify-content:center;
+
+    @media @desktop {
+        font-size: 3.5rem;
+    }
     
     #contactText{
         text-align: center;
@@ -15,15 +19,23 @@
         margin: 5vh auto;
 
         h3 {
-            font-size: 6rem;
+            font-size: 4.5rem;
             color: lightsalmon;
             margin-bottom: 8vh;
             margin-top: 9vh;
+
+            @media @desktop {
+                font-size: 6rem;
+            }
         }
 
         p {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             color: thistle;
+
+            @media @desktop {
+                font-size: 3.5rem;
+            }
         }
     }
 
@@ -33,28 +45,39 @@
     }
 
     input {
-        width: 40vw;
-        height: 10vh;
-        margin: 40px;
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         color: thistle;
+        height: 5vh;
+        margin: 30px 0;
+        padding: 20px;
 
         background-color: transparent;
         border: solid black 1px;
         box-shadow: inset 2px 5px black;
-
-
         border-radius: 40px;
+
+        @media @desktop {
+            font-size: 3.5rem;        
+            width: 40vw;
+            height: 10vh;
+            margin: 40px;
+
+        }
     }
 
     #message {
-        height: 40vh;
+        height: 30vh;
+        text-align: left;
     }
 
     #submit {
         background-color: transparent;
         color: white;
         border: solid white 5px;
+        padding: 0;
+        width: 95%;
+        height: 80px;
+        text-align: center;
 
         cursor: pointer;
 
@@ -62,6 +85,15 @@
 
         &:hover{
             animation: bounce 1s;
+        }
+
+        @media @desktop{
+            width: 40vw;
+        }
+
+        @media @tabletx {
+            // width: 35vw;
+            height: 80px;
         }
     }
 
