--- a/less/header.less
+++ b/less/header.less
@@ -1,23 +1,35 @@
 header {
-    background-image: url('../images/background.png');
-    background-position: center top;
+    // width: 100vw;
+    // background-image: url('../images/background.png');
+    // background-position: top right;
+    // background-size: cover;
 
-    width: 80%;
+
     min-height: 15vh;    
-    position: fixed;
+    // position: fixed;
 
     display: flex;
     flex-wrap: wrap;
     z-index: 2;
 
-    justify-content: space-between;
+    justify-content: space-evenly;
+    width: 100%;
+
+    @media @desktop {
+        justify-content: space-between;
+        width: 100%;
+    }
 
     #logo {
-        margin: 30px 45px;
         max-width: 240px;
         cursor: pointer;
         transition: transform 2s;
         transform: scale(1.0);
+        margin-top: 20px;
+
+        @media @desktop {
+            margin-left: 40px;
+        }
 
     }
 
